overflow fix

--- a/src/components/Articles/articles.scss
+++ b/src/components/Articles/articles.scss
@@ -30,7 +30,7 @@
             .articles-container {
                 padding-top: 2rem;
                 margin: auto;
-                overflow: scroll !important;
+                overflow-y: auto !important;
             }
         }
         .centered {
